<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  
    tools:context="com.example.money1.MainActivity" >

    <ImageView
        android:id="@+id/citymap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/citymap"
        android:minHeight="440dp"
        android:minWidth="650dp"
        android:src="@drawable/citymap" />

    <Button
        android:id="@+id/btnSpend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnAdd"
        android:layout_alignBottom="@+id/btnAdd"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="84dp"
        android:contentDescription="@string/btnspend"
        android:text="@string/spend_money" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/citymap"
        android:layout_marginLeft="89dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/btnadd"
        android:onClick="addMoney"
        android:text="@string/add_money" />

</RelativeLayout>
